# CompressedStreamingGraphPartitioning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Stream_CPI_Info.fbs  Stream_CPI_Info_generated.h  compile.sh  test_flatbuffer_log.py
.cache/clangd/index/: ExternalPQ.h.9A346766DF777206.idx  Freight_RLE_Info_generated.h.5A4BD0A93EEFD240.idx  RunLengthEncodedVector.h.91CD499DE64A2D51.idx  adaptor.h.75D4375A66827B1C.idx  adaptor.h.9CB871112736AAF9.idx  aligned_alloc.BE144DBCAB70660E.idx  aligned_alloc.h.834F6042F65BB007.idx  alignment_test.cpp.84278BF21EE722BE.idx  alignment_test.h.FE06BF7122B79B89.idx  allocator.h.64C4FE98081ACA20.idx  annotated_binary_text_gen.cpp.F81DC90F48F267D3.idx  annotated_binary_text_gen.h.FF014774AF0D97E5.idx  argtable3.c.8F864B93AA48CF40.idx  argtable3.h.95AF4A614D13AAD1.idx  array.h.980AAD5826C946F4.idx  async_schedule.cpp.ECEA1DB2A6CC3924.idx  async_schedule.h.45100019F7F9A093.idx  balance_configuration.h.6F74C6DAF878A345.idx  base.h.80CF9B2EA019C138.idx  base.h.B8E4B2C997C500BA.idx  benchmark_disks.cpp.7DBC7AC1992337A6.idx  benchmark_disks_random.cpp.0FDC455F03EF45F4.idx  benchmark_files.cpp.C4C03490DDBF4266.idx  benchmark_pqueue.cpp.79EFE1A2AE742959.idx  benchmark_sort.cpp.5FD10C4A3CBED42F.idx  bfbs_gen.h.572071E2B57E2BA1.idx  bfbs_gen_lua.cpp.E4ADD6FE82ABC5A0.idx  bfbs_gen_lua.h.C2129812097C7B3C.idx  bfbs_gen_nim.cpp.EEDF87B51E1C6E58.idx  bfbs_gen_nim.h.A3B761933E3F208A.idx  bfbs_namer.h.16F410D1C678D5ED.idx  bid.h.191A1940A26B27A6.idx  binary_annotator.cpp.8A2C51AFEEDF4697.idx  binary_annotator.h.3C1B82B4E4E35C5A.idx  block_alloc.h.74BE8283BFDEB4E2.idx  block_alloc_interleaved.h.6DF2E33759FB31C0.idx  block_manager.cpp.01E0E94B484F6887.idx  block_manager.h.9391E2532B0A1068.idx  block_prefetcher.h.6D630A77C28AE0A3.idx  boostfd_file.cpp.CF49E4D134F109D6.idx  (+333 more)
StreamCPIInfo/: GraphMetadata.py  MemoryConsumption.py  Partition.py  PartitionConfiguration.py  PartitionMetrics.py  RunTime.py
app/: configuration.h  evaluator.cpp  generatedgraphpartition.cpp  parse_parameters.h  streamcpi.cpp
lib/: FlatBufferWriter.h  definitions.h
lib/data_structure/: CPIVector.cpp  CPIVector.h  ExternalPQ.h  RunLengthEncodedVector.h
lib/data_structure/compression_vectors/: BatchRunLengthCompression.h  CompressionDataStructure.h  RunLengthCompressionVector.h
lib/io/: graph_io_stream.cpp  graph_io_stream.h
lib/partition/: partition_config.h
lib/partition/onepass_partitioning/: fennel.cpp  fennel.h  fennel_approx_sqrt.cpp  fennel_approx_sqrt.h  ldg.cpp  ldg.h  vertex_partitioning.cpp  vertex_partitioning.h
lib/tools/: quality_metrics.cpp  quality_metrics.h
